# pypi-attestations

./: .git-blame-ignore-revs  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
src/pypi_attestation_models/: __init__.py  __main__.py  _cli.py  _impl.py
src/pypi_attestations/: __init__.py  __main__.py  _cli.py  _impl.py
test/: conftest.py  test_cli.py  test_impl.py  test_init.py
test/assets/: 200170367.pem  gitlab_oidc_project-0.0.3.tar.gz.publish.attestation  no-source-repository-ref-extension.pem  pypi_attestation_models-0.0.4a2.tar.gz.attestation  pypi_attestation_models-0.0.4a2.tar.gz.sigstore  pypi_attestations-0.0.16.tar.gz.attestation  pypi_attestations-0.0.19.tar.gz.provenance  pypi_attestations-0.0.19.tar.gz.publish.attestation  pypi_attestations-0.0.19.tar.gz.slsa.attestation  rfc8785-0.0.2-py3-none-any.whl.json  rfc8785-0.0.2-py3-none-any.whl.sigstore  rfc8785-0.1.2-py3-none-any.whl.attestation  rfc8785-0.1.2-py3-none-any.whl.publish.attestation  rfc8785-0.1.2-py3-none-any.whl.sigstore  sigstore-3.6.1.tar.gz.provenance  spt3g-1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.publish.attestation
